[Misc] Improvements